[gd_scene load_steps=29 format=3 uid="uid://dpxy4w1h1tnr"]

[ext_resource type="Texture2D" uid="uid://mj6cmric32ff" path="res://sprites/textbox.png" id="1_0bi3b"]
[ext_resource type="Script" path="res://scenes/textbox.gd" id="2_hh4x5"]
[ext_resource type="AudioStream" uid="uid://dne0s2rvifjks" path="res://sfx/speech_1.wav" id="3_od0u7"]
[ext_resource type="AudioStream" uid="uid://ck6gxc6t30yaf" path="res://sfx/text.wav" id="4_kyynk"]
[ext_resource type="AudioStream" uid="uid://bkoorppgtux7i" path="res://sfx/textclose.wav" id="5_pne1f"]
[ext_resource type="AudioStream" uid="uid://10qb0xf840dq" path="res://sfx/speech_2.wav" id="6_pb010"]
[ext_resource type="AudioStream" uid="uid://b78ndtu2tuakk" path="res://sfx/speech_3.wav" id="7_d8b5a"]
[ext_resource type="AudioStream" uid="uid://86fhwl2yu0ab" path="res://sfx/speech_4.wav" id="8_5gc2p"]
[ext_resource type="AudioStream" uid="uid://bbfi25kmtk5e6" path="res://sfx/speech_5.wav" id="9_0dfil"]
[ext_resource type="AudioStream" uid="uid://urn3oq1d5j7w" path="res://sfx/kitsune_speech.wav" id="10_hdkck"]
[ext_resource type="AudioStream" uid="uid://d1gjm52el7t80" path="res://sfx/haruko_speech.wav" id="11_40x8f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i77m1"]
atlas = ExtResource("1_0bi3b")
region = Rect2(1464, 0, 244, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6305x"]
atlas = ExtResource("1_0bi3b")
region = Rect2(1220, 0, 244, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjtq7"]
atlas = ExtResource("1_0bi3b")
region = Rect2(976, 0, 244, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrkye"]
atlas = ExtResource("1_0bi3b")
region = Rect2(732, 0, 244, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqdqy"]
atlas = ExtResource("1_0bi3b")
region = Rect2(488, 0, 244, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8r2j"]
atlas = ExtResource("1_0bi3b")
region = Rect2(244, 0, 244, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jav8m"]
atlas = ExtResource("1_0bi3b")
region = Rect2(0, 0, 244, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l66tx"]
atlas = ExtResource("1_0bi3b")
region = Rect2(0, 64, 244, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdp62"]
atlas = ExtResource("1_0bi3b")
region = Rect2(0, 128, 244, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h413o"]
atlas = ExtResource("1_0bi3b")
region = Rect2(0, 256, 244, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jakvk"]
atlas = ExtResource("1_0bi3b")
region = Rect2(244, 0, 244, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6537k"]
atlas = ExtResource("1_0bi3b")
region = Rect2(488, 0, 244, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ls3sc"]
atlas = ExtResource("1_0bi3b")
region = Rect2(732, 0, 244, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f2hc"]
atlas = ExtResource("1_0bi3b")
region = Rect2(976, 0, 244, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0csq2"]
atlas = ExtResource("1_0bi3b")
region = Rect2(1220, 0, 244, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_24bpr"]
atlas = ExtResource("1_0bi3b")
region = Rect2(1464, 0, 244, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_84ov1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i77m1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6305x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjtq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrkye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqdqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8r2j")
}],
"loop": true,
"name": &"close",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jav8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l66tx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdp62")
}],
"loop": true,
"name": &"loop",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h413o")
}],
"loop": true,
"name": &"pause",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jakvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6537k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ls3sc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f2hc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0csq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24bpr")
}],
"loop": true,
"name": &"start",
"speed": 30.0
}]

[node name="textbox" type="AnimatedSprite2D"]
visible = false
top_level = true
z_index = 1
texture_filter = 1
position = Vector2(-12, -152)
scale = Vector2(3.04918, 2.5)
sprite_frames = SubResource("SpriteFrames_84ov1")
animation = &"close"
script = ExtResource("2_hh4x5")

[node name="textDisplay" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = -116.0
offset_top = -26.0
offset_right = 116.0
offset_bottom = 26.0

[node name="speech_1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_od0u7")

[node name="text" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_kyynk")

[node name="textclose" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_pne1f")

[node name="speech_2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_pb010")

[node name="speech_3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_d8b5a")

[node name="speech_4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_5gc2p")

[node name="speech_5" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_0dfil")

[node name="kitsune_speech" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_hdkck")

[node name="haruko_speech" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_40x8f")
